--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>全景数字1024</title>
+    <title>face code</title>
     <link href="css/css.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
