--- a/demo2.html
+++ b/demo2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>全景数字1024</title>
+    <title>face code</title>
     <link href="css/css.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="photoCon">
 <!--            <img src="images/plus.svg" style="width: 120px; height: 120px;">-->
 <!--            <div style="font-size: 36px;">点击上传照片</div>-->
-            <img src="images/a.png">
+            <img src="images/a.jpg">
         </div>
     </div>
     <div class="summaryTitle">
