--- a/demo2.html
+++ b/demo2.html
@@ -6,7 +6,7 @@
     <link href="css/css.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<div class="container" style="padding: 150px 0 50px 0;">
+<div class="container">
     <div class="topTitleArea">
         <div style="position: absolute; left: 20px;"><img src="images/arrow-left-bold.svg"> </div>
         <h1>坤小坤面相分析</h1>
@@ -36,7 +36,16 @@
         <div class="icon04"><img src="images/content-con-icon01.svg"> </div>
         <div style="padding: 30px;"><img style="width: 100%; height: 300px; border-radius: 15px;"></div>
     </div>
-    <div style="width: 90%; margin-top: 20px;">
+    <div class="summaryTitle">
+        <img src="images/title-icon-l.svg"> <div>乾天运势图</div> <img src="images/title-icon-r.svg"> </div>
+    <div class="contentCon">
+        <div class="icon01"><img src="images/content-con-icon01.svg"> </div>
+        <div class="icon02"><img src="images/content-con-icon01.svg"> </div>
+        <div class="icon03"><img src="images/content-con-icon01.svg"> </div>
+        <div class="icon04"><img src="images/content-con-icon01.svg"> </div>
+        <div style="padding: 30px;"><img style="width: 100%; height: 300px; border-radius: 15px;"></div>
+    </div>
+    <div style="width: 90%; margin: 20px 0 50px 0;">
         <div style="height: 140px; display: flex; align-items: end; width: 100%; justify-content: center;"><button class="button">我要问的更细致</button></div>
     </div>
 </div>
