--- a/demo.html
+++ b/demo.html
@@ -27,7 +27,7 @@
             <div class="tip warning">不戴眼镜</div>
         </div>
     </div>
-    <div style="width: 90%; margin-top: 40px;">
+    <div class="form">
         <div class="genderCon">
             性别<div class="gender"><img src="images/male.svg"> </div> 男<div class="gender gender-selected"><img src="images/female.svg"></div> 女
         </div>
@@ -37,8 +37,8 @@
             </div>
             <div><img src="images/arrow-right.svg"></div>
         </div>
-        <div style="border-top: 2px dashed #766B80; height: 140px; display: flex; align-items: end; width: 100%; justify-content: center;"><button class="button">确认提交</button></div>
     </div>
+    <div class="btnCon"><button class="submitBtn">确认提交</button></div>
 </div>
 </body>
 </html>
