--- a/demo2.html
+++ b/demo2.html
@@ -36,8 +36,8 @@
         <div class="icon04"><img src="images/content-con-icon01.svg"> </div>
         <div style="padding: 30px;"><img style="width: 100%; height: 300px; border-radius: 15px;"></div>
     </div>
-    <div style="width: 90%; margin: 20px 0 50px 0;">
-        <div style="height: 140px; display: flex; align-items: end; width: 100%; justify-content: center;"><button class="button">我要问的更细致</button></div>
+    <div>
+        <div class="btnCon"><button class="submitBtn">我要问的更细致</button></div>
     </div>
 </div>
 </body>
