--- a/demo.html
+++ b/demo.html
@@ -21,10 +21,11 @@
         <h2>拍照满足以下要求结果更准确</h2>
         <div class="tips">
             <div class="tip">正面</div>
-            <div class="tip">面部呈现完整</div>
-            <div class="tip">无刘海遮挡</div>
-            <div class="tip">细节清晰</div>
-            <div class="tip warning">不戴眼镜</div>
+            <div class="tip">彩色图</div>
+            <div class="tip">五官清晰</div>
+            <div class="tip">面部无遮挡</div>
+            <div class="tip">额头无遮挡</div>
+            <div class="tip warning">眼部无遮挡</div>
         </div>
     </div>
     <div class="form">
