--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container" style="height: 100vh;">
-    <div class="topTitleArea">
+    <div class="header">
         <h1>坤小坤面相分析</h1>
     </div>
     <div class="photoBg">
