--- a/demo2.html
+++ b/demo2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="topTitleArea">
+    <div class="header">
         <div style="position: absolute; left: 20px;"><img src="images/arrow-left-bold.svg"> </div>
         <h1>坤小坤面相分析</h1>
     </div>
