--- a/demo2.html
+++ b/demo2.html
@@ -34,7 +34,7 @@
         <div class="icon02"><img src="images/content-con-icon01.svg"> </div>
         <div class="icon03"><img src="images/content-con-icon01.svg"> </div>
         <div class="icon04"><img src="images/content-con-icon01.svg"> </div>
-        <div style="padding: 30px;"><img style="width: 100%; height: 300px; border-radius: 15px;"></div>
+        <div><img src="images/xy.svg" style="width: 100%; height: 100%; background: #1D2038; border-radius: 15px;"></div>
     </div>
     <div>
         <div class="btnCon"><button class="submitBtn">我要问的更细致</button></div>
